@@ -2,11 +2,8 @@ import javazoom.jl.decoder.JavaLayerException;
 import javazoom.jl.player.Player;
 import org.json.simple.JSONArray;
 import org.json.simple.JSONObject;
-import org.json.simple.JsonArray;
 import org.json.simple.parser.JSONParser;
 import org.json.simple.parser.ParseException;
-
-import javax.sound.sampled.*;
 import java.io.*;
 import java.net.HttpURLConnection;
 import java.net.URL;
@@ -17,14 +14,14 @@ public class JavaDictionary {
         Scanner scanner = new Scanner(System.in);
         String word;
         do {
-            System.out.println("**___Welcome___To___Java___Dictionary___***");
+            System.out.println("***___Welcome___To___Java___Dictionary___***");
+            System.out.println("(Enter 'Q' to exit)");
             System.out.print("Enter a word : ");
             word = scanner.nextLine();
-            if (word.equalsIgnoreCase("No")) break;
+            if (word.equalsIgnoreCase("q")) break;
             readData(word);
 
-
-        } while (!word.equalsIgnoreCase("No"));
+        } while (!word.equalsIgnoreCase("q"));
     }
 
     public static void readData(String word) {
@@ -41,7 +38,6 @@ public class JavaDictionary {
 
             //Start Reading API
             int respondCode = conn.getResponseCode();
-            System.out.println(respondCode);
             if (respondCode == 200) {
                 BufferedReader in = new BufferedReader(new InputStreamReader(conn.getInputStream()));
                 String inputLine;
@@ -52,7 +48,6 @@ public class JavaDictionary {
                 in.close();
                 conn.disconnect();
                 getData(content);
-                System.out.println("Successful");
             } else {
                 System.out.println("Word Not Found! Try Another.");
             }
@@ -67,17 +62,14 @@ public class JavaDictionary {
         try {
             JSONParser parser = new JSONParser();
             JSONArray jsonArray = (JSONArray) parser.parse(content.toString());
-            //Word
-            JSONObject jsonObj = (JSONObject) jsonArray.get(0);
+            JSONObject jsonObj = (JSONObject) jsonArray.getFirst();//Word
             String word = (String) jsonObj.get("word");
-            System.out.println(word);
-            //
-            //Phonetic Text And Audio
+            System.out.println("Word : "+word);
+
             JSONArray phonetics = (JSONArray) jsonObj.get("phonetics");
-            JSONObject phoneticObj = (JSONObject) phonetics.get(0);
-            System.out.println(phoneticObj);
+            JSONObject phoneticObj = (JSONObject) phonetics.getFirst();
             String text = (String) phoneticObj.get("text");//phonetic Text
-            System.out.println(text);
+            System.out.println("Phonetic : "+text);
             getAudio(jsonObj);
             getDefinition(content);
 
@@ -134,14 +126,30 @@ public class JavaDictionary {
                 String partOfSpeech = (String) index.get("partOfSpeech");
                 System.out.println("Part Of Speech : " + partOfSpeech);
 
+                System.out.print("\n");//Empty Space
+                System.out.println("***___Definitions___***");
                 JSONArray defArray = (JSONArray) index.get("definitions");
                 for (int j = 0; j < defArray.size(); j++) {
                     JSONObject defObj = (JSONObject) defArray.get(j);
                     String definitions = (String) defObj.get("definition");
                     System.out.println("Definition " + (j + 1) + " : " + definitions);
-
+                }
+                System.out.print("\n");//Empty Space
+                System.out.println("***___Synonyms___***");
+                JSONArray synArray = (JSONArray) index.get("synonyms");
+                for(int k = 0; k < synArray.size() ; k++){
+                    String synonyms = (String) synArray.get(k);
+                    System.out.println("Synonyms " + (k + 1) + " : " + synonyms);
+                }
+                System.out.print("\n");//Empty Space
+                System.out.println("***___Antonyms___***");
+                JSONArray antArray = (JSONArray) index.get("antonyms");
+                for(int k = 0; k < antArray.size() ; k++){
+                    String antonyms = (String) antArray.get(k);
+                    System.out.println("Antonyms " + (k + 1) + " : " + antonyms);
                 }
             }
+            System.out.print("\n\n");
         } catch (ParseException e) {
             throw new RuntimeException(e);
         }
